# Stupefy

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  README.md  Stupefy.sln  premake5.lua
SandBox/: SandBox.vcxproj
SandBox/Src/: SandboxApp.cpp
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/Main/: Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Sandbox/main/: SandboxApp.cpp
Stupefy/: CMakeLists.txt  Stupefy.h  Stupefy.vcxproj  Stupefy.vcxproj.filters
Stupefy-Editor/Main/: StupefyEditorApp.cpp
Stupefy/Core/: CMakeLists.txt  CoreCommon.h  Defines.h  KeyCodes.h  MouseCodes.h  TypeDefs.h
Stupefy/Core/Event/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Stupefy/Core/Layer/: Layer.cpp  Layer.h  LayerStack.cpp  LayerStack.h
Stupefy/Core/Math/: CMakeLists.txt  MathFunctions.h  Matrix3.cpp  Matrix3.h  Quaternions.cpp  Quaternions.h  StupefyMaths.h  Vector2.cpp  Vector2.h  Vector3.cpp  Vector3.h
Stupefy/Editor/: CMakeLists.txt
Stupefy/Editor/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Stupefy/Editor/Logger/: CMakeLists.txt  ColorBoy.cpp  ColorBoy.h  Logger.cpp  Logger.h
Stupefy/Main/: Application.cpp  Application.h  EntryPoint.h  Input.h  MainApp.cpp  MainApp.h  Window.h
Stupefy/Platform/OpenGL/: OpenGLContext.cpp  OpenGLContext.h  OpenGLShader.cpp  OpenGLShader.h
Stupefy/Platform/Windows/: WindowsInput.cpp  WindowsInput.h  WindowsWindow.cpp  WindowsWindow.h
Stupefy/Src/: Stupefy.h  sfpch.h
Stupefy/Src/Stupefy/: Application.cpp  Application.h  Core.h  EntryPoint.h  Log.cpp  Log.h
Stupefy/Systems/: CMakeLists.txt
Stupefy/Systems/Renderer/: Buffer.cpp  Buffer.h  Context.cpp  Context.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  renderer.cpp  renderer.h  shader.cpp  shader.h  textures.h
Stupefy/core/: CMakeLists.txt  CoreCommon.h  core_common.h  defines.h  typedefs.h
Stupefy/core/math/: CMakeLists.txt  MathFunctions.h  (+9 more)
Stupefy/main/: CMakeLists.txt  MainApp.cpp  MainApp.h  entrypoint.h  main.cpp  main.h  main_app.cpp  main_app.h
core/: core_common.h  error_macros.cpp  error_macros.h
core/math/: vector2.cpp  vector2.h  vector3.cpp  vector3.h
main/: main.cpp  main.h
platform/windows/: SCpre
scripts/: Win-Gen.bat
(+41 files in other folders)
